# catch-apis

./: .env-template  .gitignore  .gunicorn.config.py  .jenkins-1-merge-branch-to-master  .jenkins-1-merge-test-feature  .jenkins-1-test-merge-feature  .jenkins-1-test-then-merge  .jenkins-2-deploy-stage  .jenkins-2-redeploy  .jenkins-2-test-deploy-feature  .jenkins-2-test-then-deploy  .jenkins-3-deploy-dev  .jenkins-3-deploy-sandbox  .jenkins-3-test-deploy-master  .jenkins-4-upgrade-stage-to-prod  .jenkins-4-upgrade-stage-to-prod-dev  .jenkins-AAA  .jenkins-pipeline  .jenkins-pipline  .jenkins-temp  .jenkins-test  .jenkins-test-master-branch  .jenkins-test-non-master-branch  .jenkins-test-then-deploy  .jenkins-test-then-merge  .jenkins-test-then-merge_v2  .jenkins-testing  .jenkins_test_then_merge_v3  .pylintrc  .sse_tester.html  .sse_tester2.html  Dockerfile.dev  Dockerfile.local  Dockerfile.prod  README.md  _activate  _build_s2  _build_venv  _catch_production_apis.sh  _customize_swagger  (+58 more)
.github/workflows/: ci-tests.yml
.mypy_cache/3.7/: _ast.data.json  _ast.meta.json  _importlib_modulespec.data.json  _importlib_modulespec.meta.json  abc.data.json  abc.meta.json  ast.data.json  ast.meta.json  builtins.data.json  builtins.meta.json  codecs.data.json  codecs.meta.json  data_provider_service.data.json  data_provider_service.meta.json  io.data.json  io.meta.json  mmap.data.json  mmap.meta.json  models.data.json  models.meta.json  posix.data.json  posix.meta.json  sys.data.json  sys.meta.json  types.data.json  types.meta.json  typing.data.json  typing.meta.json
.pg-init-data/: _db_size.sh  _restore.sh
catch_apis/: env.py  exceptions.py  logging.py
catch_apis.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
catch_apis/api/: __init__.py  app.py  moving_target_query.py  openapi.yaml  stream.py
catch_apis/services/: __init__.py  catch_manager.py  caught.py  message.py  moving_target_query.py  queue.py
catch_apis/tasks/: __init__.py  catch_moving_target.py  worker.py
ccccTest/conda-meta/: ca-certificates-2018.12.5-0.json  history  (+16 more)
documentation/: dev-guide.md  dev-notes.md
live-db-tests/: README.md  test_alive.py  test_query_fixed.py  test_query_moving.py  test_status.py
live-tests/: test_query_fixed.py  test_query_moving.py  test_status.py
logging/: logging_dev.ini
name-search/: readme.md  stage0.py  stage1.py  stage2.py  stage3.py
scripts/: catch-apis.py
services/apis/: Dockerfile  Dockerfile.dev  Dockerfile.prod  _entrypoint_flask  _entrypoint_flask_prod  _entrypoint_woRQer  _entrypoint_woRQer_prod  _install_s2  pyproject.toml  requirements.txt  setup.cfg
services/apis/src/api/: __init__.py  app.py  caught.py  fixed_target_query.py  moving_target_query.py  openapi.yaml  status.py  stream.py
services/apis/src/catch_apis/: __init__.py
services/apis/src/catch_apis/api/: __init__.py  app.py  caught.py  moving_target_query.py  openapi.yaml  sources.py  status.py
services/apis/src/catch_apis/config/: gunicorn-flask.py
services/apis/src/catch_apis/services/: __init__.py  moving_target_query.py  sources.py  status.py  target_name.py
services/apis/src/catch_apis/tasks/: __init__.py  catch_moving_target.py
services/apis/src/catch_apis/tests/: test_target_type_patterns.py
services/apis/src/config/: env.py  gunicorn-worker.py  logging.py  query_status.py
services/apis/src/services/: __init__.py  catch_manager.py  caught.py  database_provider.py  fixed_target_query.py  marshal.py  moving_target_query.py  queue.py  status.py
services/apis/src/tasks/: __init__.py  catch_moving_target.py
services/apis/src/woRQers/: woRQer.py
src/: __init__.py  appEntry.py  app_entry.py  data_provider_service.py  env.py  logging_setup.py  middleware.py  models.py  routes.py  util.py
stubs/: README.md  __init__.py  flask.pyi  flask2.pyi
swagger/: custom-swagger.html  swagger-ui-bundle.modified-original.js  swagger-ui-bundle.original.js  swagger-ui.modified-original.html
tests/: CometEls.txt  __init__.py  asteroid_closest.txt  asteroid_names.txt  test_alive.py  test_catch.py  test_catch_query.py  test_caught.py  test_download.py  test_fixed_target.py  test_message_stream.py  test_moving_target.py  test_query_fixed.py  test_query_moving.py  test_sample.py  test_status.py  test_target_type_patterns.py  test_test_data.py  test_will_fail.py  test_ztf_labels.py
v1/: .config-template.cfg  .env-template  .pylintrc  .sse_tester.html  README.md  _demo_routes2  _develop_apis  _develop_workers  _pycache_removal  _run_tests  _sshfs_manager  requirements.txt
(+1068 files in other folders)
