[metadata]
name = catch-apis
package_name = catch_apis
author = Catch APIs Developers
#license = 
#license_file = LICENSE
url = https://github.com/Small-Bodies-Node/catch-apis
description = Planetary Data System Small-Bodies Node astronomical survey search API.
long_description = file: README.md
long_description_content_type = text/markdown
edit_on_github = False
github_project = Small-Bodies-Node/catch-apis
keywords = astronomy, astrophysics, planetary, asteroid, comet, space, science

[options]
packages = find:
package_dir = 
    =src
zip_save = False
python_requires = >=3.7
setup_requires = setuptools_scm
install_requires =
    catch>=1.0.0
    connexion>=2.7.0
    Flask>=1.1.2
    Flask-Cors>=3.0.10
    gunicorn>=20.0.4
    pds4_tools>=1.3
    psycopg2-binary>=2.8.6
    python-dotenv>=0.14.0
    redis>=3.3.8
    requests>=2.26.0
    rq==1.1.0
    sqlalchemy>=1.3.5<1.4
    swagger-ui-bundle>=0.0.9
include_package_data = False

[options.packages.find]
where = src
include = catch_apis
exclude = scripts

[options.extras_require]
test =
    pytest>=4.6
    pytest-astropy
    coverage

[tool:pytest]
minversion = 4.6
testpaths = "src/catch_apis"
astropy_header = true
doctest_plus = enabled
text_file_format = rst
addopts = --cov=src/catch_apis --cov-report=html
remote_data_strict = true
doctest_norecursedirs =
    */setup_package.py
