[metadata]
name = CATCH APIs
package_name = catch_apis
author = CATCH APIs Team
description = API interface to search PDS SBN survey data for comets and asteroids
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
package_dir=
    =src
zip_save = False
python_requires = >=3.7
install_requires =
    astropy>=4.3
    astroquery>=0.4.5
    connexion>=2.9.0
    Flask>=1.1.4
    Flask-Cors>=3.0.10
    gunicorn>=20.0.4
    pds4-tools>=1.3
    psycopg2-binary>=2.8.6
    python-dotenv>=0.19.*
    redis>=3.3.8
    requests>=2.26.0
    rq>=1.1.0
    SQLAlchemy==1.3.*
    swagger-ui-bundle==0.0.9
    catch>=1.1.0
include_package_data = True

[options.packages.find]
where = src

[options.extras_require]
test =
    pytest>=4.6
    pytest-remotedata>=0.3.3

[tool:pytest]
minversion = 4.6
testpaths = "src/catch_apis"

[options.package_data]
* =
    *.yaml
    *.txt
